[package]
name = "sol-tps"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "sol-tps"
path = "src/bin/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.7.9"
solana-sdk = "1.7.9"
spl-token = "3.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
spl-associated-token-account = "1.0.3"
solana-account-decoder = "1.7.7"
shellexpand = "2.1.0"
solana-gossip = "1.7.1"
solana-streamer = "1.7.1"
solana-net-utils = "1.7.1"
rand = "0.7.3"
anyhow = "1.0.44"
clap = "2.33.3"
