[package]
name = "spl-lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.7.9"
solana-sdk = "1.7.9"
spl-token = "3.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
spl-associated-token-account = "1.0.3"
solana-account-decoder = "1.7.7"
shellexpand = "2.1.0"
solana-program = "1.7.12"
solana-transaction-status = "1.7.12"
anyhow = "1.0.44"
bincode = "1.3.3"
arrayref = "0.3.6"
